# ESP32_BLE_Matrix_Hub

./: .gitignore  CMakeLists.txt  GFX.md  README.md  aantekeningen.txt  build_manifest.sh  cheatsheetpio.txt  manifest.json  partitions.csv  partitions8m.csv  platformio - kopie.ini  platformio.ini  pre_build.py  sdkconfig
.github/workflows/: build.yml  publish.yml
fontdesing/: bignumbers.pixi  largefont.pixi  smallfont.pixi
include/: Font.h  version.h
lib/PNGenc/: PNGenc.cpp
lib/lodepng/: lodepng.cpp  lodepng.h
src/: Bluetooth.h  Constants.h  Helpers.cpp  Helpers.h  Kookwekker.cpp  Kookwekker.h  global.h  iPixelCommands.cpp  iPixelCommands.h  iPixelDevice.cpp  iPixelDevice.h  iPixelDeviceRegistry.cpp  iPixelDeviceRegistry.h  initfs.c  main.cpp  main.h  oleddisplay.cpp  oleddisplay.h  sound.h
src/Display/: Display.cpp  Display.h  oleddisplay.cpp  oleddisplay.h
src/audio/: AudioPlayer.cpp  AudioPlayer.h  I2SSetup.cpp  I2SSetup.h  WavPlayer.cpp  WavPlayer.h
src/cgif/: cgif.c  cgif.h  cgif_raw.c  cgif_rgb.c
src/clock/: timefunctions.cpp  timefunctions.h
src/functions/: Animation.cpp  Animation.h  MatrixContext.cpp  MatrixContext.h  temperature.cpp  temperature.h
src/gfx/: Color.h  GFX.h
src/gfx/elements/: Elements.h  GFXAlternatingGroupElement.cpp  GFXAlternatingGroupElement.h  GFXElement.cpp  GFXElement.h  GFXGroupElement.cpp  GFXGroupElement.h  GFXTextElement.cpp  GFXTextElement.h
src/gfx/helpers/: Adafruit_FramebufferGFX.h  Helpers.h
src/gfx/modifiers/: GFXBackgroundColorModifier.cpp  GFXBackgroundColorModifier.h  GFXModifier.cpp  GFXModifier.h  GFXOpacityModifier.cpp  GFXOpacityModifier.h  Modifiers.h
src/gfx/parser/: ElementParser.cpp  ElementParser.h  ModifierParser.cpp  ModifierParser.h  Parser.h
src/i2c/: I2cSetup.cpp  I2cSetup.h
src/png/: GifMaker.cpp  GifMaker.h  IndexedBitmap.cpp  IndexedBitmap.h  LetterDraw.cpp  LetterDraw.h  MyFont.cpp  MyFont.h  cBitmap.cpp  cBitmap.h  letterbitmap.h  pngmaker.cpp  pngmaker.h
src/utils/: TimeMeter.h  mqtthelpers.cpp  mqtthelpers.h  webserial.cpp  webserial.h
src/web/: ChunkProcessor.cpp  ChunkProcessor.h  Endpoint.h  Helpers.h  Webserver.cpp  Webserver.h
src/web/device/: Helpers.h
src/web/device/raw/: clear.h  deleteScreen.h  sendGIF.h  sendPNG.h  sendText.h  setBrightness.h  setClockMode.h  setFunMode.h  setLED.h  setOrientation.h  setPixel.h  setRhythmAnimationMode.h  setRhythmLevelMode.h  setSpeed.h  setTime.h
src/web/network/pair/: delete.h  list.h  registry.h  upsert.h
src/web/network/scan/: list.h  start.h
